# Battery-Emulator

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EKNotes.md  Feature-CYD-Screen.md  INTER-UNIT-PROTOCOL-README.md  PYLON-BATTERY.cpp  README.md  REVERT_COMMIT.md  USER_SECRETS_TEMPLATE.ini  cmake_clean.bat  comm_nvm.cpp  emulator.log 09062026, 141424, COM4  emulator.log 10062026, 084041, COM4  extract_datalayer_info_structures.ts  min_spiffs.csv  no_spiffs.csv  platformio.ini  sdkconfig.be_size.defaults  settings_html.cpp  user_secrets_copy.py  webserver.cpp
.agents/skills/lit-best-practices/: AGENTS.md  SKILL.md
.agents/skills/lit-ct-components/: SKILL.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: parse_size.py  render_size_comment.py  size_report.py
.github/workflows/: add-comment-to-pr.yml  build-common-image.yml  compile-all-batteries.yml  compile-all-combinations-part1-batteries-A-to-M.yml  compile-all-combinations-part2-batteries-N-to-Z.yml  compile-all-combinations.yml  compile-all-double-batteries.yml  compile-all-hardware.yml  compile-all-inverters.yml  compile-arduino-sketch.yml  compile-common-image-3lb.yml  compile-common-image-BECom.yml  compile-common-image-lilygo-2CAN.yml  compile-common-image-lilygo-TCAN.yml  compile-common-image-lilygo-logging.yml  compile-common-image-lilygo.yml  compile-common-image-stark.yml  compile-common-image.yml  measure-firmware-size.yml  release-assets.yml  run-pre-commit.yml  unit-tests.yml
CYD_Battery_Emulator/: CYD.sll  CYD.slp  CYD.spj  Cheap_Yello_Display_demo.spj  README.md  partitions_ota.csv  platformio.ini  project.info
CYD_Battery_Emulator/src/: RGBledDriver.cpp  RGBledDriver.h  espnow_receiver.cpp  espnow_receiver.h  main.cpp  screen_backlight.cpp  screen_backlight.h  screen_network.cpp  screen_network.h
CYD_Battery_Emulator/src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  (+4 more)
Software/: ACAN2515.h  ACAN2515Settings.cpp  ACAN2515Settings.h  BATTERIES.h  BMW-I3-BATTERY.cpp  BMW-I3-BATTERY.h  BYD-CAN.cpp  BYD-CAN.h  BYD-MODBUS-2-LEAF-CAN.ino  CAN.c  CHADEMO-BATTERY.cpp  CHADEMO-BATTERY.h  CoilData.cpp  CoilData.h  ESP32CAN.h  IMIEV-CZERO-ION-BATTERY.cpp  IMIEV-CZERO-ION-BATTERY.h  INVERTERS.h  KIA-HYUNDAI-64-BATTERY.cpp  KIA-HYUNDAI-64-BATTERY.h  MODBUS-BYD.cpp  MODBUS-BYD.h  MODBUS-LUNA2000.cpp  MODBUS-LUNA2000.h  ModbusBridgeTemp.h  ModbusBridgeWiFi.h  ModbusClient.cpp  ModbusClientRTU.cpp  ModbusClientRTU.h  ModbusMessage.cpp  ModbusServer.cpp  ModbusServerEthernet.h  ModbusServerRTU.cpp  ModbusServerRTU.h  ModbusServerWiFi.h  ModbusTypeDefs.cpp  ModbusTypeDefs.h  NISSAN-LEAF-BATTERY.cpp  NISSAN-LEAF-BATTERY.h  PYLON-CAN.cpp  (+27 more)
Software/src/: compile_time_error_checks.h  include.h  system_settings.h
Software/test/: CMakeLists.txt
boards/: esp32c6_flash_8MB.json  esp32s3_flash_16MB.json
data/: settings_body.html  settings_scripts.html  settings_style.html
docs/: Range Therapy developer manual.docx  dataflow.drawio
dtc_files/: bmw_ix_dtc.json  bmw_phev_dtc.json  vag_mqb_dtc.json
frontend/: .env.development  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/scripts/: generate-cpp.mjs
frontend/src/: app.css  app.tsx  can_log.tsx  can_sender.tsx  cellmonitor.tsx  dashboard.tsx  events.tsx  extended.tsx  index.css  lit-app.ts  log.tsx  main.ts  main.tsx  ota.tsx  router-controller.ts  settings.tsx  vite-env.d.ts  xFetch.ts
pc/: .gitignore  CMakeLists.txt  README.md  build.bat  pc_main.cpp
scripts/: build_frontend.py
test/: CMakeLists.txt  bms_reset_tests.cpp  inter_unit_crc_tests.cpp  main_tests.cpp  microtest.h  modbus_gateway_tests.cpp  safety_tests.cpp  test_lib.cpp  test_lib.h  tests.cpp  voltage_sync_tests.cpp
test/battery/: Mg4BatteryTest.cpp  NissanLeafTest.cpp  Smart453Test.cpp  still_alive_tests.cpp
test/can_log_based/: canlog_safety_tests.cpp  utils.cpp  utils.h
test/can_log_based/can_logs/: 24_RjxzsBms_ov_cov.txt  29_RenaultZoe2_cv88.txt  37_MgHsPhev_base.txt  37_MgHsPhev_ov_cov.txt  37_MgHsPhev_overvoltage.txt  4_BoltAmpera_cv88.txt  5_BydAtto3_base.txt
test/canlog/: canlog_safety_tests.cpp
test/canlog/canlogs/: 24_RjxzsBms_overvoltage.txt  37_MgHsPhev_good.txt
test/devboard/test_safety/: test_safety.cpp
test/emul/: Arduino.cpp  Arduino.h  ESPmDNS.h  FS.h  HardwareSerial.cpp  HardwareSerial.h  IPAddress.h  Logging.cpp  Logging.h  MD5Builder.cpp  MD5Builder.h  NetworkEvents.h  Preferences.cpp  Preferences.h  Print.h  Printable.h  SPI.h  Software.cpp  Stream.h  StreamString.h  Update.cpp  Update.h  WString.cpp  WString.h  WiFi.cpp  WiFi.h  Wifi.h  can.cpp  cbuf.cpp  cbuf.h  esp-hal-gpio.h  esp32-hal-log.h  esp_err.h  esp_event.h  esp_system.h  esp_transport.h  mqtt.cpp  mqtt_client.h  print.cpp  serial.cpp  (+1 more)
test/emul/driver/: gpio.h  i2c_master.cpp  i2c_master.h
test/emul/freertos/: FreeRTOS.cpp  FreeRTOS.h  queue.h  ringbuf.cpp  ringbuf.h  semphr.cpp  semphr.h  task.cpp  task.h
test/emul/libb64/: cencode.cpp  cencode.h
test/emul/lwip/: dns.cpp  emul_fdset.h  ip4_addr.h  ip_addr.h  sockets.cpp  sockets.h  tcpbase.h
test/emul/soc/: gpio_num.h
test/inverter/: voltage_limits_tests.cpp
test/utils/: events_test.cpp  events_test.cpp_  timer_test.cpp  utils.cpp  utils.h
tools/: validate_dtc_json.py
web_data/dtc/: README.md  bmw_i3_dtc.json  bmw_ix_dtc.json  bmw_phev_dtc.json  byd_atto3_dtc.json  dtc.schema.json  fisker_ocean_dtc.json  ford_machE_dtc.json  mg_dtc.json  nissan_leaf_dtc.json  tesla_model3y_dtc.json  vag_meb_dtc.json  vag_mqb_dtc.json  volvo_SPA_dtc.json
webdemo/: CMakeLists.txt  vars.cpp  webdemo_main.cpp
webdemo/emul/: Arduino.h  ESPmDNS.h  Logging.h  SPI.h  Update.h  can.cpp  esp_system.h  esp_task_wdt.h  esp_wifi.h
webdemo/emul/freertos/: FreeRTOS.h  queue.h  task.h
webdemo/emul/lwip/: sockets.h
webdemo/emul/mbedtls/: md5.h  sha256.h
webdemo/freertos_config/: FreeRTOSConfig.h
(+939 files in other folders)
